# TL55

./: Example.ipynb  README.md  README_BCG.md  pyproject.toml  requirements.txt
data/: MV_Q_padded_2.mat  Q_inputwave2.mat
tl55/: __init__.py  api.py  bcg.py  constants.py  data.py  impedance.py  input_flow.py  left_ventricle.py  solver.py
